@@ -17,6 +17,7 @@ Regression Impact:
 
 Bugfixes:
 * Fixed potential NullPointerException in annotation scanning code 
+* Fixed PrettyContext.JSESSIONID_REGEX to support clustered session IDs
 
 ------------------------------------
            VERSION 3.3.1
